--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </nav>
             <div class="header-text">
                 <p>Communication Designers</p>
-                <h1>Hi we are group ABSTAINED <br> <span>Welcome on our website</span></h1>
+                <h1>Hi we are group POLITICAL EDUCATION <br> <span>Welcome on our website</span></h1>
             </div>
         </div>
     </div>
